--- a/src/index.scss
+++ b/src/index.scss
@@ -6,12 +6,11 @@
 .mwf-video-player {
     position: relative;
     padding-bottom: 56.25%;
-
     iframe {
-        position: absolute;
+        position: absolute !important;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100% !important;
+        height: 100% !important;
     }
 }
